[ASN-76] fix: ranking 로직 수정